# todolist-rs

./: .env  .gitignore  Cargo.toml  README.md  config.toml
migrations/: 20241109005421_init-tables.sql
src/: config.rs  errors.rs  lib.rs  main.rs
src/auth/: mod.rs
src/handlers/: mod.rs  request.rs  todolist.rs  user.rs  utils.rs
src/models/: todolist.rs  user.rs
src/route/: mod.rs
