[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
toml = "0.8.19"
axum = { version = "0.7.7", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  "macros"
] }
serde = { version = "1.0.214", features = ["derive"] }
jwt-simple = "0.12.10"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.2", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }